# MYHappyReader

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mywork/myhappyreader/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LineBreaker.cpp  native-lib.cpp
app/src/main/java/com/mywork/myhappyreader/: MainActivity.java
app/src/main/java/com/mywork/myhappyreader/model/: BookInfo.java  Page.java
app/src/main/java/com/mywork/myhappyreader/utils/: FileUtils.java  LineBreaker.java  MYFilenameFilter.java  Utility.java
app/src/main/java/com/mywork/myhappyreader/view/: FileListActivity.java  FileListFragment.java  HistoryListActivity.java  ReaderActivity.java
app/src/main/java/com/mywork/myhappyreader/viewModel/: FileListViewModel.java  ReaderViewModel.java
app/src/main/res/layout/: activity_file_list.xml  activity_history_list.xml  activity_main.xml  activity_reader.xml  content_file_list.xml  content_history_list.xml  content_main.xml  fragment_file_list.xml  item_file.xml
app/src/main/res/menu/: menu_file_list.xml  menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mywork/myhappyreader/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
